# AssetFlow

./: .gitignore  ARCHITECTURE.md  README.md  WORKFLOW
backend/: fix.py  fix_categories.py  pyproject.toml  seed_admin.py  seed_logs.py  seed_test_data.py
backend/app/: main.py
backend/app/api/v1/: api_router.py  deps.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/modules/activity_logs/: models.py  routes.py  schemas.py  service.py
backend/app/modules/allocations/: models.py  repository.py  routes.py  schemas.py  service.py
backend/app/modules/assets/: lifecycle.py  models.py  repository.py  routes.py  schemas.py  service.py
backend/app/modules/audits/: models.py  repository.py  routes.py  schemas.py  service.py
backend/app/modules/auth/: routes.py  schemas.py  service.py
backend/app/modules/bookings/: models.py  repository.py  routes.py  schemas.py  service.py
backend/app/modules/categories/: models.py  routes.py  schemas.py
backend/app/modules/dashboard/: routes.py  service.py
backend/app/modules/departments/: routes.py  schemas.py
backend/app/modules/maintenance/: models.py  repository.py  routes.py  schemas.py  service.py
backend/app/modules/notifications/: repository.py  routes.py  service.py
backend/app/modules/reports/: routes.py  schemas.py  service.py
backend/app/modules/returns/: models.py  repository.py  routes.py  schemas.py  service.py
backend/app/modules/transfers/: models.py  repository.py  routes.py  schemas.py  service.py
backend/scripts/: seed_sample_data.py
frontend/: package.json  (+2 more)
(+25 files in other folders)
